# claude_o_meter

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: dump_token.rs  preview_icon.rs
homebrew/: claude-o-meter.rb
scripts/: build_app.sh
src/: api.rs  app_state.rs  bars.rs  credentials.rs  history.rs  icons.rs  launch_at_login.rs  lib.rs  main.rs  menu.rs  notifications.rs  poller.rs  settings.rs  theme.rs  time_fmt.rs
tests/: api_integration.rs
tests/fixtures/: usage_minimal.json  usage_nominal.json  usage_over.json  usage_percentage.json
